# stock-ai-trader

./: .gitignore  LICENSE  README.md  RLagent.py  RLagent_withDQN.py  gradio_interface.py  process_stock_data.py  pyproject.toml  stock_prediction_lstm.py  visualization.py
data/: ABBV.csv  CAT.csv  COP.csv  GOOGL.csv  GS.csv  SBUX.csv
tmp/gradio/output/: AAPL.csv_prediction_metrics.csv  AAPL.csv_prediction_summary.txt
tmp/gradio/predictions/: AAPL.csv_predictions.pkl
tmp/gradio/ticker/: AAPL.csv
tmp/gradio/transactions/: AAPL.csv_transactions.csv
