[project]
name = "es vs dqn in stock trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Freya379",email = "125752050+Freya379@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
